# pioneer_ufba

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  pioneer_control.yaml
csv_files/: control_states_path.csv  ground_truth_path.csv  ground_truth_path_path.csv  plot_graphs.m  robot_path.csv  robot_path_path.csv  robot_velocities.csv  robot_velocities_path.csv
csv_files/graphs/: angular_linear.eps  angular_linear.fig  angular_linear2.eps  angular_linear2.fig  control_state.eps  control_state.fig  odom_vs_gt.eps  odom_vs_gt.fig  trajetoria_k1_1_k2_10.eps  trajetoria_k1_1_k2_10.fig  trajetoria_k1_1_k2_3.eps  trajetoria_k1_1_k2_3.fig  velocidade_angular_rodas.eps  velocidade_angular_rodas.fig
csv_files/k1_1_k2_10/: DrawRobot.m  ground_truth_path_[-3.54, -3.54, -2.36]_k1_1_k2_10.csv  ground_truth_path_[-3.54, 3.54, 0]_k1_1_k2_10.csv  ground_truth_path_[-5, 0, -3.14]_k1_1_k2_10.csv  ground_truth_path_[0, -5, -1.57]_k1_1_k2_10.csv  ground_truth_path_[0, 5, 0]_k1_1_k2_10.csv  ground_truth_path_[2.5, -4.33, -1.57]_k1_1_k2_10.csv  ground_truth_path_[3.54, 3.54, 0]_k1_1_k2_10.csv  ground_truth_path_[4.5, -2.17, -0.785]_k1_1_k2_10.csv  ground_truth_path_[5, 0, 0]_k1_1_k2_10.csv  plot_graphs_k1_1_k2_10.m  robot_path_[-3.54, -3.54, -2.36]_k1_1_k2_10.csv  robot_path_[-3.54, 3.54, 0]_k1_1_k2_10.csv  robot_path_[-5, 0, -3.14]_k1_1_k2_10.csv  robot_path_[0, -5, -1.57]_k1_1_k2_10.csv  robot_path_[0, 5, 0]_k1_1_k2_10.csv  robot_path_[2.5, -4.33, -1.57]_k1_1_k2_10.csv  robot_path_[3.54, 3.54, 0]_k1_1_k2_10.csv  robot_path_[4.5, -2.17, -0.785]_k1_1_k2_10.csv  robot_path_[5, 0, 0]_k1_1_k2_10.csv  robot_velocities_[-3.54, -3.54, -2.36]_k1_1_k2_10.csv  robot_velocities_[-3.54, 3.54, 0]_k1_1_k2_10.csv  robot_velocities_[-5, 0, -3.14]_k1_1_k2_10.csv  robot_velocities_[0, -5, -1.57]_k1_1_k2_10.csv  robot_velocities_[0, 5, 0]_k1_1_k2_10.csv  robot_velocities_[2.5, -4.33, -1.57]_k1_1_k2_10.csv  robot_velocities_[3.54, 3.54, 0]_k1_1_k2_10.csv  robot_velocities_[4.5, -2.17, -0.785]_k1_1_k2_10.csv  robot_velocities_[5, 0, 0]_k1_1_k2_10.csv
csv_files/k1_1_k2_3/: ground_truth_path_[-3.54, -3.54, -2.36]_k1_1_k2_3.csv  ground_truth_path_[-3.54, 3.54, 0]_k1_1_k2_3.csv  ground_truth_path_[-5, 0, -3.14]_k1_1_k2_3.csv  ground_truth_path_[0, -5, -1.57]_k1_1_k2_3.csv  ground_truth_path_[0, 5, 0]_k1_1_k2_3.csv  ground_truth_path_[2.5, -4.33, -1.57]_k1_1_k2_3.csv  ground_truth_path_[3.54, 3.54, 0]_k1_1_k2_3.csv  ground_truth_path_[4.5, -2.17, -0.785]_k1_1_k2_3.csv  ground_truth_path_[5, 0, 0]_k1_1_k2_3.csv  plot_graphs_k1_1_k2_3.m  robot_path_[-3.54, -3.54, -2.36]_k1_1_k2_3.csv  robot_path_[-3.54, 3.54, 0]_k1_1_k2_3.csv  robot_path_[-5, 0, -3.14]_k1_1_k2_3.csv  robot_path_[0, -5, -1.57]_k1_1_k2_3.csv  robot_path_[0, 5, 0]_k1_1_k2_3.csv  robot_path_[5, 0, 0]_k1_1_k2_3.csv  (+12 more)
etc/: pioneer.rviz
install/: .install.sh
launch/: load_map.launch  main.launch  move_base.launch  nav_bundle.launch  pioneer3dx.launch  pioneer_control.launch
maps/: map_01v3.yaml
plugin/: set_speed_pioneer_plugin.cpp
src/: Odometria_python.py  csv_reader.py  pioneer_control.py  pioneer_odom_publisher.cpp  pioneer_odometry.py  pioneer_tf_broadcaster.cpp  plot_sigmoid.py  python_odometry.py  rrt_ros_rviz.py  test_python.py  trabalho_1_odometria.py  trabalho_2_odometria_controle.py  trabalho_final.py
urdf/: materials.xacro  pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_wheel.xacro
worlds/: lar.world
